fix flicker

--- a/src/index.css
+++ b/src/index.css
@@ -27,6 +27,6 @@ video {
 	bottom:0;
 	right: 0;
 	cursor: pointer;
-	padding-right: 10px;
-	padding-bottom: 10px;
+	padding-right: 14px;
+	padding-bottom: 14px;
 }
